# snacks-crud

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
frontend/: base.html  snack_DeleteView.html  snack_Update.html  snack_create.html  snack_delete.html  snack_details.html  snack_list.html
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_rename_discription_snack_description.py
snacks_crud_project/: settings.py  urls.py
